2023-06-18  Przemysław Sobala  <przemyslaw.sobala@gmail.com>

	* coders/png.c (ReadOnePNGImage): Retrieve image orientation from
	EXIF (if present) and store in image.

	* coders/webp.c (ReadWEBPImage): Retrieve image orientation from
	EXIF (if present) and store in image.

2023-06-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Add --no-po4a --no-doxygen to 'xz'
	build to hopefully get it building again in the oss-fuzz builds.

2023-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/operator.c (QuantumDepthCB): Fix compilation failure in
	Q32 build.

2023-06-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (TIFFReadErrors): Mask "Internal error, unknown
	tag" errors from TIFFFieldWithTag() which block working with
	anything but development libtiff.

2023-06-04  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/topol.c: More strict check of proper blob data size.
	
2023-06-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (ConvertImageCommand): Skip MogrifyImages() if
	in ping mode.  Addresses Sourceforge issue #704 "heap overflow in
	gm (magick/effect.c:4417 in SpreadImage)".
	
	* magick/effect.c (SpreadImage): Assure that offsets_index is in
	valid range.  Reject request if radius is larger than image.
	Addresses SourceForge issue #705 "heap overflow in gm #2
	(magick/effect.c:4405 in SpreadImage)".

2023-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (GetBlurKernel): Use resource limited memory
	allocator for blur kernel.  This plus MagickStrToD() updates
	addresses #703 "allocation-size-too-big in gm (magick/effect.c:797
	in GetBlurKernel)".

	* magick/utility.c (MagickStrToD): Add infinity and nan checks.

	* magick/command.c (MogrifyImage): Assure that -set has arguments.
	Addresses SourceForge issue #701 "Segmentation Violation in gm
	(magick/attribute.c:324 in SetImageAttribute)".
