@@ -37,6 +37,13 @@
 </div>
 
 <div class="document">
+<p>2023-06-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>coders/heif.c (ReadMetadata): Retrieve image orientation from
+EXIF and store in image.</p></li>
+</ul>
+</blockquote>
 <p>2023-06-18  Przemysław Sobala  &lt;<a class="reference external" href="mailto:przemyslaw&#46;sobala&#37;&#52;&#48;gmail&#46;com">przemyslaw<span>&#46;</span>sobala<span>&#64;</span>gmail<span>&#46;</span>com</a>&gt;</p>
 <blockquote>
 <ul class="simple">
